--- a/css/backMemManage.css
+++ b/css/backMemManage.css
@@ -430,4 +430,13 @@ header ul li:nth-child(1):after {
   font-weight: bold;
 }
 
+.right .container1 .empManage table a {
+  text-align: center;
+  text-decoration: none;
+  padding: 2px;
+  border-radius: 0;
+  border-width: 1px;
+  padding-left: 5px;
+}
+
 /*# sourceMappingURL=backMemManage.css.map */
