--- a/sass/backMemManage.scss
+++ b/sass/backMemManage.scss
@@ -61,6 +61,14 @@
                         font-weight: bold;
                     }
                 }
+                a{
+                    text-align: center;
+                    text-decoration: none;
+                    padding: 2px;
+                    border-radius: 0;
+                    border-width: 1px;
+                    padding-left: 5px;
+                }
             }
         }
     }
