--- a/sass/modules/_guide.scss
+++ b/sass/modules/_guide.scss
@@ -36,6 +36,7 @@ body{
     .front,
     .backed {
         position: relative;
+        transition: .3s;
         img {
             width: 300px;
             height: 300px;
