--- a/css/backMemManage.css
+++ b/css/backMemManage.css
@@ -420,6 +420,10 @@ header ul li:nth-child(1):after {
   margin: 40px auto 60px;
 }
 
+.right .container1 .empManage table input[type="text"] {
+  width: 70%;
+}
+
 .right .container1 .empManage table .newEmpTROff {
   display: none;
 }
@@ -445,6 +449,10 @@ header ul li:nth-child(1):after {
   font-weight: bold;
 }
 
+.right .container1 .empManage table tr:last-child {
+  border-bottom: 0px solid #000;
+}
+
 .right .container1 .empManage table a {
   text-align: center;
   text-decoration: none;
@@ -452,6 +460,10 @@ header ul li:nth-child(1):after {
   border-radius: 0;
   border-width: 1px;
   padding-left: 5px;
+}
+
+.right .container1 .empManage .half {
+  display: none;
 }
 
 /*# sourceMappingURL=backMemManage.css.map */
