--- a/sass/backMemManage.scss
+++ b/sass/backMemManage.scss
@@ -41,6 +41,9 @@
             table {
                 width: 100%;
                 margin: 40px auto 60px;
+                input[type="text"] {
+                    width: 70%;
+                }
                 .newEmpTROff {
                     display: none;
                 }
@@ -61,7 +64,10 @@
                         font-weight: bold;
                     }
                 }
-                a{
+                tr:last-child {
+                    border-bottom: 0px solid #000;
+                }
+                a {
                     text-align: center;
                     text-decoration: none;
                     padding: 2px;
@@ -69,6 +75,9 @@
                     border-width: 1px;
                     padding-left: 5px;
                 }
+            }
+            .half {
+                display: none;
             }
         }
     }
