--- a/css/Cat_ShoppingStore_cart.css
+++ b/css/Cat_ShoppingStore_cart.css
@@ -1,154 +1,500 @@
-body{
-    background-color: #eee;
-    
-    /* background-image: url(../img/marble.jpg);
-    background-size: cover;
-    background-attachment: fixed; */
-}
+@charset "UTF-8";
+/* http://meyerweb.com/eric/tools/css/reset/ 
+v2.0 | 20110126
+License: none (public domain)
+*/
+@import url(https://fonts.googleapis.com/earlyaccess/notosanstc.css);
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline; }
 
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+  display: block; }
 
-@media only screen and (max-width: 768px){
-    header{
-        visibility: hidden;
-    }
-}
+body {
+  line-height: 1; }
 
-.wrap{
-    margin-left: 200px;
-    line-height: 28px;
-    letter-spacing: 3px;
-    font-size: 14px;
-}
+ol, ul {
+  list-style: none; }
 
-.wrapCenter{
-	width: 70%;
-	margin: auto;
-}
+blockquote, q {
+  quotes: none; }
 
-@media only screen and (max-width: 768px){
-    .wrap{
-        margin-left: 0;
-    }
+blockquote:before, blockquote:after {
+  content: '';
+  content: none; }
 
-    .wrapCenter{
-        width: 95%;
-    }
-}
+q:before, q:after {
+  content: '';
+  content: none; }
 
-h2{
-	text-align: center;
-    font-size: 36px;
-    font-weight: bold;
-    margin-top: 10px;
-    margin-bottom: 20px;
-    line-height: 26px;
-    letter-spacing: 15px;
-    text-align: center;
-    padding: 5%;
-	margin: 0;
-}
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
 
-table{
-    margin: 3% auto 0 auto;
-}
+* {
+  outline: none; }
 
-.info{
-    background-color: #fff;
-    margin-bottom: 5%;
-}
+* {
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box; }
 
-.info th{
-    width: 30%;
-    padding: 2.5% 0 2.5% 2.5%;
-}
+input, select {
+  font-family: 'Noto Sans TC';
+  font-weight: bolder; }
 
-.info input{
-    width: 90%;
-}
+body {
+  font-family: 'Noto Sans TC';
+  font-weight: 300;
+  letter-spacing: 3px; }
 
-.mail input{
-    width: 3%;
-}
+.btns .btn {
+  font-size: 30px;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  background-color: #fff;
+  line-height: 50px;
+  text-align: center;
+  overflow: hidden;
+  position: relative;
+  border-radius: 50%;
+  transition: .35s;
+  box-shadow: 0 5px 15px -5px rgba(0, 0, 0, 0.1);
+  padding-left: 3px;
+  padding-bottom: 3px;
+  z-index: 1; }
+  .btns .btn:hover:before {
+    transition: .35s;
+    transition-timing-function: cubic-bezier(0.31, -0.105, 0.43, 1.59);
+    top: -10%;
+    left: -10%; }
+  .btns .btn:before {
+    content: '';
+    display: block;
+    width: 120%;
+    height: 120%;
+    position: absolute;
+    transform: rotate(45deg);
+    top: 90%;
+    left: -110%;
+    z-index: -1; }
 
-.payWay input{
-    width: 3%;
-}
+.btns .fa {
+  vertical-align: middle; }
 
-.itemHead{
-   
-    margin-top: 0;
-}
-.itemHead td{
-    text-align: center;
-    vertical-align: middle;
-    border-bottom: 2px solid #333;
-}
+.btns .btn.facebook {
+  color: #3b5998; }
+  .btns .btn.facebook:before {
+    background-color: #3b5998; }
+  .btns .btn.facebook:hover {
+    color: #fff; }
 
-.itemHead td:nth-child(1){
-    text-align: left;
-}
+.btns .btn.twitter {
+  color: #3cf; }
+  .btns .btn.twitter:before {
+    background-color: #3cf; }
+  .btns .btn.twitter:hover {
+    color: #fff; }
 
-.confirm{
-    text-align: center;
-    margin-top: 5%;
-}
+.btns .btn.google {
+  color: #dc4a38; }
+  .btns .btn.google:before {
+    background-color: #dc4a38; }
+  .btns .btn.google:hover {
+    color: #fff; }
 
-.pay{
-    margin-top: 3%;
-    margin-bottom: 10%;
-}
+.btns .btn.youtube {
+  color: #f00; }
+  .btns .btn.youtube:before {
+    background-color: #f00; }
+  .btns .btn.youtube:hover {
+    color: #fff; }
 
-
-.confirm a{
-    text-decoration: none;
-    border: 2px solid #333;
-    border-radius: 100px;
-    width: 150px;
-    padding: 1% 5%;
-    color: #333;
-}
-
-.confirm a:hover{
+.defaultBtn {
+  font-size: 16px;
+  border: #333 2px solid;
+  border-radius: 24px;
+  color: #333;
+  padding: 4px 30px;
+  background-color: transparent;
+  cursor: pointer;
+  transition: .3s all;
+  outline: none; }
+  .defaultBtn:hover {
+    color: white;
     background-color: #EAAF88;
-    border: 2px solid #EAAF88;
-    color: #fff;
-}
+    border-color: #EAAF88; }
 
-table{
-  width: 100%;
-}
+.btn-more {
+  width: 160px;
+  text-align: center;
+  height: 40px;
+  line-height: 40px;
+  background-color: #fff;
+  text-decoration: none;
+  color: #333;
+  position: relative;
+  overflow: hidden;
+  z-index: 2;
+  font-family: notoSans_r; }
+  .btn-more:hover {
+    color: #fff; }
+  .btn-more:before {
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    content: '';
+    position: absolute;
+    left: -100%;
+    background-color: transparent;
+    transition: .3s;
+    z-index: -1; }
+  .btn-more:hover:before {
+    left: 0;
+    background-color: #333; }
+  .btn-more:after {
+    margin-top: -7px;
+    width: 7px;
+    height: 13px;
+    background: url(../images/icon01.png) no-repeat right center;
+    position: absolute;
+    top: 50%;
+    right: 18px;
+    content: ""; }
 
-td img{
-    width: 80%;
-    vertical-align: middle;
-    margin: 10% 0;
-}
+.breadcrumbs {
+  margin-bottom: 40px;
+  font-size: 18px; }
+  .breadcrumbs a {
+    font-size: 14px;
+    text-decoration: none;
+    border-width: 1px;
+    padding: 4px 10px;
+    text-align: center; }
 
-p{
-    text-align: left;
-}
-
-.count{
-    width: 50px;
-}
-
-.saleCard,.payCard{
-    padding: 4% 10%;
-    border: 3px solid #EAAF88;
-    background-color: rgba(255, 255, 255, 0.6);
-    border-radius: 15px;
-    margin: 5% 15%;
+.page {
+  text-align: center;
+  padding: 30px; }
+  .page .pageNo {
     text-align: center;
-}
-.select{
-    margin-left: 2%;
-}
+    text-decoration: none;
+    padding: 5px;
+    padding-left: 7px;
+    border-radius: 0px;
+    border-width: 1px;
+    margin: 10px; }
 
-.delButton{
-    /* padding: 10%; */
-    border:2px solid #333;
-    border-radius: 100px;
-}
+@media all and (max-width: 767px) {
+  .breadcrumbs {
+    margin-top: 40px;
+    margin-bottom: 40px;
+    text-align: center; }
+    .breadcrumbs a {
+      border: none;
+      padding: 0; }
+      .breadcrumbs a:hover {
+        color: #333;
+        background-color: transparent;
+        border-color: transparent; } }
+
+footer {
+  background-color: #f5eae3;
+  margin-left: 200px;
+  padding: 15px; }
+  footer .follow {
+    padding: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+  footer nav {
+    margin: auto; }
+    footer nav ul {
+      display: flex;
+      justify-content: space-around; }
+      footer nav ul li {
+        width: 20%;
+        margin: 15px; }
+        footer nav ul li:hover {
+          transform: translateY(-3px);
+          transition: .35s; }
+        footer nav ul li a {
+          text-align: center;
+          border: 1px solid #333;
+          text-decoration: none;
+          color: #333;
+          display: block;
+          width: 100%;
+          padding: 15px; }
+  footer span {
+    display: inline-block;
+    position: relative;
+    top: -20px;
+    padding: 10px; }
+
+@media all and (max-width: 991px) {
+  footer {
+    margin-left: 0;
+    width: 100%; } }
+
+@media all and (max-width: 767px) {
+  .section footer {
+    margin-left: 0;
+    width: 100%;
+    height: 20vh; }
+    .section footer span {
+      display: block;
+      text-align: center;
+      top: -10px; } }
+
+header {
+  background-color: #eaaf88;
+  width: 200px;
+  height: 100vh;
+  position: fixed;
+  padding-left: 15px;
+  box-shadow: 2px 0 10px rgba(153, 153, 153, 0.315);
+  z-index: 999; }
+  header .logo {
+    position: relative;
+    top: 60px;
+    width: 180px;
+    text-align: center; }
+    header .logo a {
+      text-decoration: none;
+      color: #fff; }
+    header .logo img {
+      width: 80%; }
+  header ul {
+    position: absolute;
+    bottom: 180px; }
+    header ul li {
+      margin: 1px 0;
+      position: relative; }
+      header ul li:hover {
+        background-color: #fff;
+        box-shadow: -2px 3px 6px rgba(63, 62, 62, 0.397);
+        transition: .3s; }
+      header ul li:hover a {
+        color: #000;
+        transition: .3s; }
+      header ul li a {
+        width: 185px;
+        display: block;
+        color: #fff;
+        text-decoration: none;
+        font-size: 18px;
+        padding: 15px 20px; }
+  header .icons {
+    width: 180px;
+    display: flex;
+    padding: 15px;
+    padding-right: 20px;
+    justify-content: space-around;
+    position: absolute;
+    bottom: 40px; }
+    header .icons #like {
+      font-size: 12px;
+      text-align: center;
+      line-height: 20px;
+      display: block;
+      width: 15px;
+      height: 15px;
+      position: relative;
+      color: #d33;
+      top: -17px;
+      right: -25px;
+      font-family: 'Noto Sans TC';
+      font-weight: 700; }
+    header .icons a {
+      text-decoration: none;
+      color: #fff; }
+      header .icons a:hover {
+        transform: scale(1.15);
+        transition: .3s; }
+
+.hb {
+  position: absolute;
+  z-index: 999999999;
+  background-color: #eaaf88;
+  padding: 2px 5px;
+  border-radius: 0 0 10px 10px;
+  display: none;
+  bottom: -68px;
+  right: 0;
+  padding: 15px 10px 10px 10px; }
+
+header.active {
+  transform: translateY(0);
+  transition: .6s; }
+
+.hamburger .line {
+  width: 40px;
+  height: 4px;
+  background-color: #ffffff;
+  display: block;
+  margin: 8px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out; }
+
+.hamburger:hover {
+  cursor: pointer; }
+
+#hamburger-6.is-active {
+  -webkit-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  -webkit-transition-delay: 0.6s;
+  -o-transition-delay: 0.6s;
+  transition-delay: 0.6s;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg); }
+
+#hamburger-6.is-active .line:nth-child(2) {
+  width: 0px; }
+
+#hamburger-6.is-active .line:nth-child(1),
+#hamburger-6.is-active .line:nth-child(3) {
+  -webkit-transition-delay: 0.3s;
+  -o-transition-delay: 0.3s;
+  transition-delay: 0.3s; }
+
+#hamburger-6.is-active .line:nth-child(1) {
+  -webkit-transform: translateY(10px);
+  -ms-transform: translateY(10px);
+  -o-transform: translateY(10px);
+  transform: translateY(10px); }
+
+#hamburger-6.is-active .line:nth-child(3) {
+  -webkit-transform: translateY(-14px) rotate(90deg);
+  -ms-transform: translateY(-14px) rotate(90deg);
+  -o-transform: translateY(-14px) rotate(90deg);
+  transform: translateY(-14px) rotate(90deg); }
+
+body {
+  background-color: #eee;
+  /* background-image: url(../img/marble.jpg);
+    background-size: cover;
+    background-attachment: fixed; */ }
+
+.wrap {
+  margin-left: 200px;
+  line-height: 28px;
+  letter-spacing: 3px;
+  font-size: 14px; }
+
+.wrapCenter {
+  width: 70%;
+  margin: auto; }
+
+@media only screen and (max-width: 768px) {
+  .wrap {
+    margin-left: 0; }
+  .wrapCenter {
+    width: 95%; } }
+
+h2 {
+  text-align: center;
+  font-size: 36px;
+  font-weight: bold;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  line-height: 26px;
+  letter-spacing: 15px;
+  text-align: center;
+  padding: 5%;
+  margin: 0; }
+
+table {
+  margin: 3% auto 0 auto; }
+
+.info {
+  background-color: #fff;
+  margin-bottom: 5%; }
+
+.info th {
+  width: 30%;
+  padding: 2.5% 0 2.5% 2.5%; }
+
+.info input {
+  width: 90%; }
+
+.mail input {
+  width: 3%; }
+
+.payWay input {
+  width: 3%; }
+
+.itemHead {
+  margin-top: 0; }
+
+.itemHead td {
+  text-align: center;
+  vertical-align: middle;
+  border-bottom: 2px solid #333; }
+
+.itemHead td:nth-child(1) {
+  text-align: left; }
+
+.confirm {
+  text-align: center;
+  margin-top: 5%; }
+
+.pay {
+  margin-top: 3%;
+  margin-bottom: 10%; }
+
+.confirm a {
+  text-decoration: none;
+  border: 2px solid #333;
+  border-radius: 100px;
+  width: 150px;
+  padding: 1% 5%;
+  color: #333; }
+
+.confirm a:hover {
+  background-color: #EAAF88;
+  border: 2px solid #EAAF88;
+  color: #fff; }
+
+table {
+  width: 100%; }
+
+td img {
+  width: 80%;
+  vertical-align: middle;
+  margin: 10% 0; }
+
+p {
+  text-align: left; }
+
+.count {
+  width: 50px; }
+
+.saleCard, .payCard {
+  padding: 4% 10%;
+  border: 3px solid #EAAF88;
+  background-color: rgba(255, 255, 255, 0.6);
+  border-radius: 15px;
+  margin: 5% 15%;
+  text-align: center; }
+
+.select {
+  margin-left: 2%; }
+
+.delButton {
+  /* padding: 10%; */
+  border: 2px solid #333;
+  border-radius: 100px; }
 
 /* @media only screen and (max-width: 768px){
 
@@ -178,3 +524,208 @@ p{
 
     
 } */
+.signUpLightboxBlack {
+  background-color: rgba(0, 0, 0, 0.8);
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  z-index: 1000;
+  display: none; }
+
+.signUpLightbox {
+  z-index: 1001;
+  position: fixed;
+  display: none; }
+  .signUpLightbox .cancel {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    font-size: 20px;
+    z-index: 1002;
+    cursor: pointer; }
+  .signUpLightbox .bgImg {
+    width: 400px;
+    height: 600px;
+    float: left;
+    background-color: #333;
+    border-radius: 10px 0 0 10px;
+    background-image: url("../images/memberBG.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat; }
+  .signUpLightbox .formShape {
+    background-color: #91989f;
+    width: 400px;
+    height: 600px;
+    float: left;
+    border-radius: 0 10px 10px 0;
+    position: relative; }
+    .signUpLightbox .formShape .chioce {
+      text-align: center; }
+      .signUpLightbox .formShape .chioce:last-child {
+        margin-top: 20px; }
+      .signUpLightbox .formShape .chioce button {
+        background-color: transparent;
+        border: none;
+        display: inline-block;
+        line-height: 2em;
+        transition: .1s;
+        outline: none;
+        color: rgba(245, 245, 245, 0.7);
+        font-size: 30px;
+        cursor: pointer; }
+        .signUpLightbox .formShape .chioce button:hover {
+          color: #fff; }
+      .signUpLightbox .formShape .chioce .selected {
+        border-bottom: 1px solid #eaaf88;
+        color: #fff; }
+    .signUpLightbox .formShape form {
+      padding: 10px 50px;
+      margin: 0 auto;
+      color: #fff;
+      font-family: 'Noto Sans TC';
+      font-weight: 300; }
+      .signUpLightbox .formShape form label {
+        margin-top: 10px;
+        margin-bottom: 4px;
+        display: block;
+        font-size: 18px; }
+        .signUpLightbox .formShape form label:first-child {
+          margin-top: 0; }
+        .signUpLightbox .formShape form label small {
+          font-size: 12px;
+          color: rgba(245, 245, 245, 0.7); }
+      .signUpLightbox .formShape form .formBtn {
+        width: 240px;
+        border: 1px solid #333;
+        display: block;
+        line-height: 1.5em;
+        text-align: center;
+        border-radius: 1000px;
+        letter-spacing: 1px;
+        transition: .3s;
+        color: #333;
+        margin: 0 auto 30px;
+        cursor: pointer; }
+        .signUpLightbox .formShape form .formBtn:hover {
+          background-color: #eaaf88;
+          border: 1px solid #eaaf88;
+          color: #fff; }
+      .signUpLightbox .formShape form input {
+        border: none;
+        background-color: transparent;
+        border-bottom: 1px solid rgba(245, 245, 245, 0.7);
+        width: 100%; }
+        .signUpLightbox .formShape form input:-ms-input-placeholder {
+          line-height: 1em;
+          padding: 5px 15px;
+          color: rgba(245, 245, 245, 0.7);
+          font-style: italic;
+          font-size: 12px; }
+        .signUpLightbox .formShape form input:-moz-placeholder {
+          line-height: 1em;
+          padding: 5px 15px;
+          color: rgba(245, 245, 245, 0.7);
+          font-style: italic;
+          font-size: 12px; }
+        .signUpLightbox .formShape form input::-moz-placeholder {
+          line-height: 1em;
+          padding: 5px 15px;
+          color: rgba(245, 245, 245, 0.7);
+          font-style: italic;
+          font-size: 12px; }
+        .signUpLightbox .formShape form input::-webkit-input-placeholder {
+          line-height: 1em;
+          padding: 5px 15px;
+          color: rgba(245, 245, 245, 0.7);
+          font-style: italic;
+          font-size: 12px; }
+      .signUpLightbox .formShape form #userPhoto {
+        display: none; }
+      .signUpLightbox .formShape form .formSubmitBtn {
+        display: inline-block;
+        width: 100px;
+        font-size: 14px; }
+      .signUpLightbox .formShape form .chioce {
+        margin-top: 20px; }
+      .signUpLightbox .formShape form .signInUpPos {
+        width: 170px;
+        position: absolute;
+        left: 50%;
+        margin-left: -85px;
+        bottom: 14px;
+        color: #eee;
+        font-size: 12px; }
+        .signUpLightbox .formShape form .signInUpPos span {
+          background-color: transparent;
+          color: #eee;
+          border-bottom: #eee 1px solid;
+          cursor: pointer;
+          outline: none;
+          letter-spacing: 0; }
+  .signUpLightbox .formShape2 {
+    display: none;
+    background-color: #bdc0ba; }
+    .signUpLightbox .formShape2 .chioce .selected {
+      border-bottom-color: #876633; }
+
+@media all and (max-width: 991px) {
+  .signUpLightbox .bgImg {
+    display: none;
+    visibility: hidden;
+    width: 0;
+    height: 0; }
+  .signUpLightbox .formShape {
+    border-radius: 10px; } }
+
+@media all and (max-width: 767px) {
+  .signUpLightbox .bgImg {
+    display: none;
+    visibility: hidden;
+    width: 0;
+    height: 0; }
+  .signUpLightbox .formShape {
+    width: 300px;
+    border-radius: 10px; }
+    .signUpLightbox .formShape .chioce button {
+      font-size: 14px; }
+    .signUpLightbox .formShape form .formBtn {
+      width: 180px;
+      font-size: 14px; }
+    .signUpLightbox .formShape form .formSubmitBtn {
+      display: inline-block;
+      width: 80px;
+      font-size: 14px; } }
+
+@media all and (max-width: 991px) {
+  header {
+    top: 0;
+    right: 5%;
+    margin: auto;
+    width: 30%;
+    height: 70vh;
+    transform: translateY(-100%);
+    border-radius: 0 0 0 30px;
+    display: block !important; }
+    header .logo {
+      left: calc(50% - 90px);
+      top: 10px; }
+    header ul {
+      width: 90%;
+      bottom: 120px; }
+      header ul li a {
+        width: 100%;
+        text-align: center; }
+    header .icons {
+      left: 0;
+      right: 0;
+      margin: auto; }
+  .hb {
+    display: block; } }
+
+@media all and (max-width: 767px) {
+  header {
+    width: 90%;
+    height: 75vh; }
+    header .logo img {
+      width: 70%; } }
